# VPMPCC

./: .gitattributes  README.md
devel/include/f110_msgs/: CarState.h  CarStateStamped.h  GapData.h  LapData.h  OppWpnt.h  OpponentTrajectory.h  PidData.h  ProjOppPoint.h  ProjOppTraj.h
devel/lib/f1tenth_simulator/: behavior_controller  keyboard  mux  random_walk  simulator
devel/lib/pkgconfig/: f110_msgs.pc  f1tenth_simulator.pc
devel/share/ackermann_msgs/cmake/: ackermann_msgs-msg-extras.cmake  ackermann_msgs-msg-paths.cmake  ackermann_msgsConfig.cmake
devel/share/f110_msgs/cmake/: f110_msgs-msg-paths.cmake  f110_msgsConfig.cmake
devel/share/f1tenth_simulator/cmake/: f1tenth_simulatorConfig.cmake
devel/share/nonlinear_mpc_casadi/cmake/: nonlinear_mpc_casadiConfig.cmake
devel/share/osuf1_common/cmake/: osuf1_commonConfig.cmake  (+2 more)
params/: ddrx_unified_params.yaml
params/mpc/: BO_params_icra.json
src/: .gitignore
src/f1tenth_simulator/: pbl_params.yaml
src/f1tenth_simulator/launch/: pbl_sim.launch  racecar_model.launch  racecar_sim_ddrx.xacro  simulator.rviz
src/f1tenth_simulator/node/: simulator.cpp
src/f1tenth_simulator/src/: std_kinematics.cpp
src/utils/f110_msgs/: CMakeLists.txt  README.md
src/vpmpcc_planner/src/nonlinear_mpc_casadi/: CMakeLists.txt  package.xml
src/vpmpcc_planner/src/nonlinear_mpc_casadi/launch/: ddrx_nmpcc.launch
src/vpmpcc_planner/src/nonlinear_mpc_casadi/scripts/: planner_loader.py
toolkit/: racecar_sim_ddrx.xacro  sim_setup.sh
toolkit/maps/mapwheV1/: mapwheV1.json  mapwheV1.pbstream  mapwheV1.pgm  mapwheV1.yaml
(+64 files in other folders)
